# fence-tech-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Tech Challenge Instructions - Senior Product Engineer.txt  docker-compose.yml  transcription.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/api/: deps.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: covenant.py  health.py
backend/business/: covenant.py  enums.py  health.py
backend/business/calculator/: __init__.py  base.py  dispatcher.py  educa.py  nomina.py  payearly.py  resolver.py
backend/contracts/: FacilityCovenantRegistry.abi.json
backend/core/: exceptions.py  logging.py  settings.py
backend/core/clients/: __init__.py  contract_abi.py  covenant_registry.py  rpc.py
backend/core/utils/: __init__.py
backend/schemas/: __init__.py  base.py  covenant.py  educa.py  error.py  health.py  nomina.py  payearly.py
backend/scripts/: readiness_check.py
backend/tests/: conftest.py
backend/tests/e2e/: test_covenant_on_chain.py
backend/tests/integration/: test_covenant_api.py  test_health_api.py
backend/tests/unit/: test_calculators.py  test_covenant_handler.py  test_covenant_registry_client.py  test_dispatcher.py  test_educa_schema.py  test_nomina_schema.py  test_payearly_schema.py  test_real_data_calculators.py  test_resolver.py  test_settings.py
data/: facility_a_educa_isa.json  facility_b_payearly_ewa.json  facility_c_nomina.json
scripts/: curl_covenant_samples.sh  post_covenant_sample.py  quickstart_dev.sh  run_covenant_calculation.py  (+2 more)
(+8 files in other folders)
