[project]
name = "backend"
version = "0.1.0"
description = "Fence Tech Challenge Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
    "web3>=7.16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
